# medford

./: .gitignore  LICENSE  README  README.md  medford_fileparser.py  medford_models.py  medford_smartdict.py  medford_token.py  pydantic_test.py  setup.cfg  spec.md  spec.txt  tmp.txt
DEPRECIATED_tests/: test_detailparser.py  test_linereader.py  test_pydanticModels.py
example_medford_files/: made_up_BCODMO.MEDFORD  made_up_BCODMO.MEDFORD_JSON  pdam_cunning.MEDFORD  pdam_cunning.MEDFORD_JSON
samples/: DeSalvo-2010.mfd  Mayfield-2014.mfd  Pooyaei_Mehr_2013.mfd  Shpilker_2021.mfd  Shpilker_2021.mfd.JSON  all_syntax_errs.MFD  comment_bug.mfd  dnc.MFD  dnc.MFD.JSON  made_up_BAGIT.MEDFORD  made_up_BAGIT.MEDFORD_JSON  made_up_BAGIT.MFD  made_up_BAGIT.MFD.JSON  made_up_BCODMO.MEDFORD  made_up_BCODMO.MEDFORD_JSON  made_up_BCODMO.MFD  made_up_BCODMO.MFD.JSON  made_up_Freeform.MEDFORD  made_up_Freeform.MEDFORD_JSON  made_up_Freeform.MFD  made_up_Freeform.MFD.JSON  new_parser_sample.MFD  pdam_cunning.MEDFORD  pdam_cunning.MEDFORD_JSON  pdam_cunning.MFD  pdam_cunning.MFD.JSON
src/: .medford_error_mngr.py.swp  helpers_file.py  medford.py  medford_BagIt.py  medford_detail.py  medford_detailparser.py  medford_error_mngr.py  medford_fileparser.py  medford_models.py  medford_token.py  test_detail.py  test_detailparser.py  test_fileHelpers.py  test_medford.py  test_pydanticModels.py  test_smartdict.py
tests/: __init__.py  pytest.ini  test_custom_errors.py  test_detail.py  test_detailparser.py  test_dictionizer.py  test_linereader.py  test_lines.py  test_medford.py  (+5 more)
(+42 files in other folders)
