[metadata]
name = medford
version = 2.0.0
author = Polina Shpilker
author_email = polina.shpilker@tufts.edu
description = The MEDFORD Command Line tool for validating & compiling medford research metadata files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TuftsBCB/medford
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
requires-python = >=3.8
install_requires = 
    pydantic ==2.4.2

[options.packages.find]
where = src